Revision history for Perl module File::pushd

{{$NEXT}}

    - updated docs to clarify that pushd() and tempd() croak on errors
    - if tempd() croaks, error appears at tempd()'s caller, not from within
      tempd() itself
    - warnings enabled if perl version >= 5.006
    
1.00 Tue Sep 25 08:19:30 EDT 2007
    - changed to the Apache License, version 2.0; (it's clearer, relicensable,
      and is explicit about contributions)
    - moved pod/coverage tests to xt/ 
    - preserve() will preserve a temporary directory beyond the program end
      (by design rather than due to bug RT#21953 in File::Temp); added 
      tests to confirm this behavior after File::Temp is fixed

0.99 Sat Oct 21 08:56:07 EDT 2006
    - bumped version for pre-release before 1.00
    - updated Pod and converted to wikidoc style
    - added example directory

0.32 Sat Feb  4 23:41:33 EST 2006
    - eliminated syntax that prevented backwards compatibility to 5.004
    - adjusted Build.PL to lesser dependencies
    - added optional pod/pod-coverage test (skipped by default)
    - switching to development-odd/release-even version numbering
    
0.30 Sat Dec  3 10:24:16 EST 2005
    - eliminated subclassing of Path::Class to eliminate this non-core
      dependency and improve cross platform compatibility
    - improved portability of tests

0.24 Tue Nov  8 09:40:02 EST 2005
    - added Exporter to @ISA for backwards compatibility [Anton Berezin]
    
0.23 Mon Nov  7 22:14:51 EST 2005
    - derived directories revert to Path::Class::Dir objects instead of
      File::pushd objects

0.22 Mon Nov  7 18:26:50 EST 2005
    - fixed bug in Win32 tests for changing to root directory
      (work around a Path::Class/File::Spec bug)
      
0.21 Mon Nov  7 15:08:17 EST 2005
    - objects created are now subclasses of Path::Class::Dir
    - added ability to preserve temporary directories after creation
    - fixed overloading bug (added fallback)

0.20 Fri Sep  2 06:47:07 EDT 2005